Fix for Figures spacing and info tooltip position

--- a/src/styles-custom.scss
+++ b/src/styles-custom.scss
@@ -326,12 +326,6 @@ fa-icon[icon='external-link-alt'] {
   padding-left: 5px;
 }
 
-// Columns
-.col {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 // Forms
 .mat-pseudo-checkbox {
   background: #fff;
